Fixed news images on mobile and scroll err

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4242,3 +4242,6 @@ input:checked + .slider:before {
   width: auto;
   height: auto;
 } */
+.news-item{
+  max-width:263px;
+}
